# ChemometricStudio

./: .gitignore  ChemometricStudio.spec  EULA.md  FILE_STRUCTURE_GUIDE.md  FUNCTION_DEVELOPMENT_REFERENCE.md  LICENSE  NOTICE  README.md  REFACTORING_SUMMARY.md  about_us.json  acknowledgements.json  add_graph_dialog.py  add_table_dialog.py  add_text_dialog.py  addon_manager.py  analyst.py  dialog_data_source_utils.py  execution_reporting.py  function_specs.json  graph_renderer.py  gui.py  language_manager.py  launcher.py  main_gui.py  model.json  model_log.txt  pyproject.toml  requirements.txt  routing_map_window.py  runtime_paths.py  settings.py  test_d_specs_refactoring.py  test_load_data_params.py  user.py  user_gui.py
Documentation/: ANALYSIS_CONFIGURATION.md  CV_PIPELINE.md  GUI_QUICKSTART.md  MULTI_DIMENSIONAL_SLICING_GUIDE.md  ORGANIZATION_SUMMARY.md  README.md  README_ROUTING.md  TABLE_DATA_SLICING_QUICK_REFERENCE.md
Graphics/: Icon.af  Icon.af~lock~  Info.af  Info.af~lock~  Splashscreen.af~lock~
Licenses/: README.md
Manual/: README.md  analysis-custom-analysis.html  analysis-report-tab.html  analysis-reporting.html  analysis-tab.html  function-baseline-correction.html  function-blank-subtraction.html  function-center-scale.html  function-cv-configuration.html  function-ensemble-start-member-end.html  function-first-order-calibration.html  function-load-data.html  function-loop-start-end.html  function-mcr-als-analysis.html  function-npls-analysis.html  function-parafac-analysis.html  function-parallel-start-branch-end.html  function-pca-analysis.html  (+20 more)
(+147 files in other folders)
