[project]
name = "Chemometric Studio"
version = "0.1.1 alpha"
description = "Chemometric Studio — Your open lab for chemometric analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "tensorly==0.9.0",
    "pylatex==1.4.2",
    "pandas==3.0.1",
]

[tool.poetry.scripts]
cm-studio = "launcher"
